# eRCaGuy_hello_world

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  NOTES_architecture_and_best_practices.md  README.md  TODO.md  TODO2.txt  eRCaGuy_hello_world--what to work on next--Gabriel.odt  find_interview_prep.sh  low_level.md  tree.txt
FreeRTOS/: FreeRTOSConfig.h  FreeRTOSConfig_GS_customizations.h  NOTES_architecture_and_best_practices.md  README.md  freertos_debugging.c  freertos_debugging.h
Qt/: README.md
arduino/: README.md  event_and_button_debouncing.md  timing.md
awk/: awk_hello_world.sh  awk_hello_world_SAMPLE_OUTPUT.txt  awk_super_simple.sh  awk_syntax_tests.sh  input_file_1.txt
bash/: .gitignore  Link to ElectricRCAircraftGuy--PDF2SearchablePDF [THIS IS A SOLID BASH EXAMPLE!].desktop  Link to PDF2SearchablePDF--pdf2searchablepdf.sh at master · ElectricRCAircraftGuy--PDF2SearchablePDF.desktop  README.md  alarm.sh  alarm_lib.sh  alsa_aplay_high_tone.sh  alsa_aplay_low_tone.sh  alsa_aplay_play_music.sh  alsa_aplay_try_to_play_via_for_loop_WIP.sh  alsa_aplay_wav_file.sh  ansi_color_codes.sh  ansi_color_codes_simple_lib.sh  ansi_color_codes_simple_lib_demo.sh  ansi_text_format_lib.sh  ansi_text_format_lib_README.md  ansi_text_format_lib_unittest.sh  aplay_alsa_play_high_tone.sh  aplay_alsa_play_low_tone.sh  argument_parsing__1_beginner.sh  argument_parsing__2_intermediate.sh  argument_parsing__3_advanced__gen_prog_template.sh  array_list_all_files_and_directories.sh  array_of_arrays__2D_3D_multidimensional_arrays.sh  array_pass_as_bash_parameter.sh  array_pass_as_bash_parameter_1_indexed.sh  array_pass_as_bash_parameter_2_associative.sh  array_pass_as_bash_parameter_by_reference.sh  array_practice.sh  array_practice_associative__ie_hash_tables.sh  array_print.sh  array_slicing_demo.sh  arrays_join_and_print.sh  back_up_all_input_args.sh  centipede_game.sh  character_escaping_demo.sh  (+40 more)
c/: TODO.md  (+177 more)
cpp/sockets_poll/: CMakeLists.txt  Makefile  README.md  main.cpp
(+510 files in other folders)
